# MaterialWS

./: .gitignore  Init.py  InitGui.py  MaterialWS.py  MaterialWSGui.py  README.md  TestMaterialWSApp.py  package.xml
MaterialWS/: Configuration.py
MaterialWS/Database/: Database.py  DatabaseMySQL.py  DatabaseMySQLCreate.py  DatabaseMySQLTest.py  Exceptions.py
MaterialWS/Tests/MySQL/: TestMySQL.py
MaterialWS/UI/Commands/: CmdCreate.py  CmdManageUsers.py  CmdMigrate.py  CmdTest.py
MaterialWS/UI/Settings/: DlgSettingsDatabase.py
MaterialWS/UI/Tasks/: TaskCreateDatabase.py
MaterialWS/WS/: Exceptions.py  WS.py
MaterialWS/manager/: Exceptions.py  MaterialWSManager.py
MaterialWS/util/: UIPath.py
Resources/db/: create_tables.sql
Resources/ui/: DlgCreateDatabase.ui  DlgSettingsDatabase.ui
