<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>MaterialWS</name>
  <description>A database interface for FreeCAD materials.</description>
  <version>0.0.1</version>
  <date>2024-11-19</date>
  <maintainer email="dcarter@davidcarter.ca">David Carter</maintainer>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url type="repository" branch="main">https://github.com/davesrocketshop/Rocket</url>
  <icon>Resources/icons/MaterialWSWorkbench.svg</icon>
  <freecadmin>1.1</freecadmin>

  <content>
    <workbench>
      <classname>MaterialWSWorkbench</classname>
      <subdirectory>./</subdirectory>
      <tag>materials</tag>

      <depend>Material</depend>
      <!-- <depend type="python">mysql-connector-python</depend> -->
      <depend type="python">pyodbc</depend>
    </workbench>
  </content>

</package>
